Removed no wrap from project titles to prevent excessive space

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   margin: 0 50px 0 0;
 }
 
-.category > h2, .project-container > .project-title{
+.category > h2{
   white-space: nowrap;
 }
 
